force-app/main/default/objects/DIA_PayrollSetting__c/DIA_PayrollSetting__c.object-meta.xml
<CustomObject>
    <label>DIA Payroll Setting</label>
    <nameField>
        <displayFormat>DIAPS-{000000}</displayFormat>
        <label>DIA Payroll Setting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DIA Payroll Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>