force-app/main/default/objects/DIA_PayrollSetting__c/fields/HSA__c.field-meta.xml
<CustomField>
    <fullName>HSA__c</fullName>
    <label>HSA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>