force-app/main/default/objects/DIA_PayrollSetting__c/fields/HW__c.field-meta.xml
<CustomField>
    <fullName>HW__c</fullName>
    <label>H&amp;W</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>