force-app/main/default/objects/DIA_PayrollSetting__c/fields/Vacation__c.field-meta.xml
<CustomField>
    <fullName>Vacation__c</fullName>
    <label>Vacation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>